# bolakuasa

./: .gitignore  PROJECT.md  bear_ascii_animation_instructions.md  bear_face.py  fullama.py  hasil_output.txt  input_record.json  input_record.txt  main.py  output_response.json  output_response.txt  pyproject.toml  transcript.py
.antigravitycli/: df919bd8-b8ef-44dc-9dfd-46799e86bc3a.json
llama/: libggml-base.so.0  libggml-base.so.0.11.1  libggml.so.0  libllama-common.so.0  libllama.so.0  libllama.so.0.0.9118  libmtmd.so.0  libmtmd.so.0.0.9118  llama-batched-bench  llama-bench  llama-cli  llama-completion  llama-debug-template-parser  llama-fit-params  llama-gguf-split  llama-imatrix  llama-mtmd-cli  llama-mtmd-debug  llama-perplexity  llama-quantize  llama-results  llama-template-analysis  llama-tokenize  llama-tts
