[project]
name = "qwen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "torch",
    "transformers",
    "accelerate",
    "soundfile",
    "numpy",
    "requests",
    "piper-tts",
    "qwen-asr",
    "pygame>=2.6.1",
    "pydub>=0.25.1",
]
